--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,5 +1,5 @@
 parameters:
-- name: image
+- name: runTimeParameter
   displayName: runTimeParameter
   default: test1
   values:
@@ -22,4 +22,4 @@ jobs:
   steps:
   - script: echo building $(Build.BuildNumber)
   - ${{ if eq(parameters.test, true) }}:
-    - script: echo ${{ parameters.runTimeParameter }}
+    - script: echo ${{ parameters.runTimeParameter }} $(pullRequest)
