--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -22,4 +22,4 @@ jobs:
   steps:
   - script: echo building $(Build.BuildNumber)
   - ${{ if eq(parameters.test, true) }}:
-    - script: echo ${{ parameters.runTimeParameter }} $(pullRequest)
+    - script: echo ${{ parameters.runTimeParameter }} $(tagvalue)
